--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,15 @@
 
 {% include home-hero.html %}
 
+<style>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 70%;
+}
+</style>
+
     <main>
         <div class="container">
             <div class="row">
@@ -11,3 +20,5 @@
             </div>
         </div>
     </main>
+
+{% include footer.html %}
