--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,29 +4,43 @@
   <!-- Meta -->
   <meta charset="utf-8">
 
-  <title>{{ site.title }}</title>
+  <title>{{ site.title }} | {{ site.author.name }}</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta content="yes" name="apple-mobile-web-app-capable">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-  <!-- RSS -->
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }} - {{ site.description }}" href="{{ site.url }}/feed.xml">
-  <link rel="alternate" type="application/atom+xml" title="{{ site.title }} - {{ site.description }}" href="{{ site.url }}/atom.xml">
-
   <!-- Favicons -->
-  <link rel="icon" href="{{ site.url }}/img/favicon.png">
+  <link rel="icon" type="image/png" href="https://jinglescode.github.io/assets/img/favicon.png" />
 
   <!-- Fonts -->
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,400italic,700|Merriweather:400,300,300italic,400italic,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,400italic,700|Merriweather:400,300,300italic,400italic,700' rel='stylesheet' type='text/css'/>
 
   <script defer src="https://use.fontawesome.com/releases/v5.12.1/js/all.js"></script>
+
+  <meta name="generator" content="Jekyll v3.9.0" />
+  <meta property="og:title" content="{{ site.title }}" />
+  <meta name="author" content="{{ site.author.name }}" />
+  <meta property="og:locale" content="en_US" />
+  <meta name="description" content="{{ site.description }}" />
+  <meta property="og:description" content="{{ site.description }}" />
+  <link rel="canonical" href="{{ site.url }}" />
+  <meta property="og:url" content="{{ site.url }}" />
+  <meta property="og:site_name" content="{{ site.author.name }}" />
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics_id }}"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', '{{ site.google_analytics_id }}');
+  </script>
 
   </head>
 
   <!-- Styles -->
-  <link rel="stylesheet" href="{{ "/public/css/animate.min.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/public/css/style.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/public/css/animate.min.css" | prepend: site.baseurl }}"/>
+  <link rel="stylesheet" href="{{ "/public/css/style.css" | prepend: site.baseurl }}"/>
 
 </head>
 <body class="{{ post.title | downcase | replace:' ','-' | replace:',','' | strip_html }}{% if page.category %} category-{{ page.category }}{% endif %}{% if page.layout-class %} layout-{{ page.layout-class }}{% endif %}">
