--- a/_includes/home-hero.html
+++ b/_includes/home-hero.html
@@ -10,7 +10,7 @@
           </p>
 
           <div class="hero-buttons">
-            <a href="{{ site.paper_link }}"
+            <a href="https://github.com/jinglescode/ssvep-multi-task-learning/blob/master/Deep-Multi-Task-Learning-for-SSVEP-Detection-and-Visual-Response-Mapping.pdf"
               ><button class="btn btn-default btn-lg">
                 <i class="far fa-file-alt fa-lg" style="margin-right: 10px"></i
                 >Paper
